# f1-optimal-ers

./: .gitignore  BASELINE_SUMMARY.md  README.md  TODO.md  demo_mpc_race.py  main.py  pyproject.toml  requirements.txt  run_all_strategies.py  run_mpc_multilap.py  start.sh  test_mpc.py
backend/: server.py
config/: __init__.py  app_config.py  ers.py  pit.py  vehicle.py
configs/: example.toml
controllers/: __init__.py  base.py  ers_mpc.py  greedy_baseline.py  mpc.py  mpc_old.py  offline_optimizer.py  simple_rule.py  velocity_solver.py
docs/: specs.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
models/: __init__.py  dynamics.py  track.py  vehicle_dynamics.py
random_scripts/: compare_baselines.py  test_costate_extraction.py  validate_project.py
scripts/: compare_baselines.py  compare_ecms_nlp.py
simulation/: __init__.py  lap.py  multi_lap.py  race.py
solvers/: __init__.py  base.py  costate_extraction.py  ecms.py  forward_backward.py  lap_time_map.py  multi_lap_nlp.py  pit_stop_recommender.py  spatial_nlp.py
src/: dyn_models.py  fastf1_etl.py  mpc_within_lap.py  multi_lap_layer.py  ocp_single_lap.py  params.py  plotting.py  run_demo.py  track_model.py
strategies/: __init__.py  base.py  baselines.py  greedy_baseline.py  simple_rule.py
tests/: test_pit_recommender.py  test_tire_degradation.py  test_visualization_and_multilap.py
tracking/: __init__.py  mpc_tracker.py
utils/: __init__.py  animation.py  results_viz.py  run_manager.py  tire_degradation.py
visualization/: __init__.py  animation.py  multi_lap_viz.py  (+5 more)
(+87 files in other folders)
