[project]
name = "f1-optimal-ers"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "casadi>=3.6.0",
  "fastf1>=3.0.0",
  "typer>=0.9.0",
  "numpy>=1.24.0",
  "matplotlib>=3.6.0",
  "pandas>=2.0.0",
  "pyyaml>=6.0.0",
  "scipy>=1.10.0",
  "plotly>=5.14.0",
  "jupyter>=1.0.0",
  "tqdm>=4.65.0",
]
